some style fixes in den mq

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <p>001</p>
             <h2>The Golden Bear</h2>
           </div>
-          <div>
+          <div class="golden-bear-text">
             <h5>
               This design is all about the resilience of California to overcome
               difficult situations and come out stronger than before. It’s a
